Nettoyage et restauration de la bonne version du dossier ms-patrimoine
