# backend/ms-patrimoine/src/main/java/com/pgvpt/dto/PatrimoineUpdate.java
@@ -1,66 +1,0 @@
-package com.pgvpt.dto;
-
-import java.net.URI;
-import java.util.Objects;
-import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
-import com.fasterxml.jackson.annotation.JsonProperty;
-import com.fasterxml.jackson.annotation.JsonCreator;
-import com.fasterxml.jackson.annotation.JsonSubTypes;
-import com.fasterxml.jackson.annotation.JsonTypeInfo;
-import com.fasterxml.jackson.annotation.JsonValue;
-import com.pgvpt.dto.Accessibilite;
-import com.pgvpt.dto.CategoriePatrimoine;
-import com.pgvpt.dto.CollectionMusee;
-import com.pgvpt.dto.Conservation;
-import com.pgvpt.dto.Contact;
-import com.pgvpt.dto.EspeceProtegee;
-import com.pgvpt.dto.EtatConservation;
-import com.pgvpt.dto.Exposition;
-import com.pgvpt.dto.HoraireOuverture;
-import com.pgvpt.dto.Localisation;
-import com.pgvpt.dto.Media;
-import com.pgvpt.dto.Menace;
-import com.pgvpt.dto.MonumentUpdate;
-import com.pgvpt.dto.MuseeUpdate;
-import com.pgvpt.dto.NatureMonument;
-import com.pgvpt.dto.NatureSiteNaturel;
-import com.pgvpt.dto.PeriodeHistorique;
-import com.pgvpt.dto.Photo;
-import com.pgvpt.dto.SiteNaturelUpdate;
-import com.pgvpt.dto.StatutPatrimoine;
-import com.pgvpt.dto.Tarification;
-import java.net.URI;
-import java.time.LocalDate;
-import java.time.OffsetDateTime;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.UUID;
-import org.springframework.format.annotation.DateTimeFormat;
-import org.openapitools.jackson.nullable.JsonNullable;
-import java.time.OffsetDateTime;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.*;
-import org.hibernate.validator.constraints.*;
-import io.swagger.v3.oas.annotations.media.Schema;
-
-
-import java.util.*;
-import jakarta.annotation.Generated;
-
-
-@JsonIgnoreProperties(
-  value = "type", // ignore manually set type, it will be automatically generated by Jackson during serialization
-  allowSetters = true // allows the type to be set during deserialization
-)
-@JsonTypeInfo(use = JsonTypeInfo.Id.NAME, include = JsonTypeInfo.As.PROPERTY, property = "type", visible = true)
-@JsonSubTypes({
-  @JsonSubTypes.Type(value = MonumentUpdate.class, name = "MonumentUpdate"),
-  @JsonSubTypes.Type(value = MuseeUpdate.class, name = "MuseeUpdate"),
-  @JsonSubTypes.Type(value = SiteNaturelUpdate.class, name = "SiteNaturelUpdate")
-})
-
-@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.10.0")
-public interface PatrimoineUpdate {
-    public String getType();
-}
