# backend/ms-patrimoine/src/main/resources/api.yml
@@ -244,22 +244,7 @@ paths:
           in: query
           schema:
             type: string
-        - name: latitude
-          in: query
-          schema:
-            type: number
-            format: double
-        - name: longitude
-          in: query
-          schema:
-            type: number
-            format: double
-        - name: rayonKm
-          in: query
-          schema:
-            type: number
-            format: double
-            minimum: 0
+
       responses:
         '200':
           description: Résultats de recherche
@@ -467,32 +452,37 @@ components:
     # ============================================================
 
     Patrimoine:
-      oneOf:
-        - $ref: '#/components/schemas/SiteNaturel'
-        - $ref: '#/components/schemas/Musee'
-        - $ref: '#/components/schemas/Monument'
-      discriminator:
-        propertyName: type
-        mapping:
-          SITE_NATUREL: '#/components/schemas/SiteNaturel'
-          MUSEE: '#/components/schemas/Musee'
-          MONUMENT: '#/components/schemas/Monument'
+      allOf:
+        - $ref: '#/components/schemas/PatrimoineBase'
+        - type: object
+          discriminator:
+            propertyName: type
+            mapping:
+              SITE_NATUREL: '#/components/schemas/SiteNaturel'
+              MUSEE: '#/components/schemas/Musee'
+              MONUMENT: '#/components/schemas/Monument'
 
     PatrimoineCreate:
-      oneOf:
-        - $ref: '#/components/schemas/SiteNaturelCreate'
-        - $ref: '#/components/schemas/MuseeCreate'
-        - $ref: '#/components/schemas/MonumentCreate'
-      discriminator:
-        propertyName: type
+      allOf:
+        - $ref: '#/components/schemas/PatrimoineBase'
+        - type: object
+          discriminator:
+            propertyName: type
+            mapping:
+              SITE_NATUREL: '#/components/schemas/SiteNaturelCreate'
+              MUSEE: '#/components/schemas/MuseeCreate'
+              MONUMENT: '#/components/schemas/MonumentCreate'
 
     PatrimoineUpdate:
-      oneOf:
-        - $ref: '#/components/schemas/SiteNaturelUpdate'
-        - $ref: '#/components/schemas/MuseeUpdate'
-        - $ref: '#/components/schemas/MonumentUpdate'
-      discriminator:
-        propertyName: type
+      allOf:
+        - $ref: '#/components/schemas/PatrimoineBase'
+        - type: object
+          discriminator:
+            propertyName: type
+            mapping:
+              SITE_NATUREL: '#/components/schemas/SiteNaturelUpdate'
+              MUSEE: '#/components/schemas/MuseeUpdate'
+              MONUMENT: '#/components/schemas/MonumentUpdate'
 
     PatrimoineBase:
       type: object
@@ -501,7 +491,6 @@ components:
         - type
         - categorie
         - description
-        - localisation
       properties:
 
         id:
@@ -530,7 +519,7 @@ components:
           maxLength: 255
 
         type:
-          $ref: '#/components/schemas/TypePatrimoine'
+          type: string
 
         categorie:
           $ref: '#/components/schemas/CategoriePatrimoine'
@@ -642,8 +631,6 @@ components:
         telephone:
           type: string
 
-        localisation:
-          $ref: '#/components/schemas/Localisation'
 
         accessibilite:
           $ref: '#/components/schemas/Accessibilite'
@@ -718,7 +705,7 @@ components:
 
     SiteNaturel:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/Patrimoine'
         - type: object
           properties:
             superficie:
@@ -770,7 +757,7 @@ components:
 
     Musee:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/Patrimoine'
         - type: object
           properties:
             nombreCollections:
@@ -815,7 +802,7 @@ components:
 
     Monument:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/Patrimoine'
         - type: object
           properties:
             styleArchitectural:
@@ -864,7 +851,7 @@ components:
 
     SiteNaturelCreate:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/PatrimoineCreate'
         - type: object
           required:
             - type
@@ -872,10 +859,6 @@ components:
             - natureSite
             - ecosysteme
           properties:
-            type:
-              type: string
-              enum:
-                - SITE_NATUREL
             superficie:
               type: number
               format: double
@@ -890,16 +873,12 @@ components:
 
     MuseeCreate:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/PatrimoineCreate'
         - type: object
           required:
             - type
             - nombreCollections
           properties:
-            type:
-              type: string
-              enum:
-                - MUSEE
             nombreCollections:
               type: integer
               minimum: 0
@@ -914,17 +893,13 @@ components:
 
     MonumentCreate:
       allOf:
-        - $ref: '#/components/schemas/PatrimoineBase'
+        - $ref: '#/components/schemas/PatrimoineCreate'
         - type: object
           required:
             - type
             - styleArchitectural
             - natureMonument
           properties:
-            type:
-              type: string
-              enum:
-                - MONUMENT
             styleArchitectural:
               type: string
             anneeConstruction:
@@ -933,90 +908,83 @@ components:
               type: string
             natureMonument:
               $ref: '#/components/schemas/NatureMonument'
+            materiauxConstruction:
+              type: array
+              items:
+                type: string
+            dimensions:
+              type: string
+            commanditaire:
+              type: string
+            contexteHistorique:
+              type: string
+            personnagesAssocies:
+              type: array
+              items:
+                type: string
 
     SiteNaturelUpdate:
       allOf:
-        - $ref: '#/components/schemas/SiteNaturelCreate'
+        - $ref: '#/components/schemas/PatrimoineUpdate'
+        - type: object
+          properties:
+            superficie:
+              type: number
+              format: double
+            natureSite:
+              $ref: '#/components/schemas/NatureSiteNaturel'
+            ecosysteme:
+              type: string
+            especesProtegees:
+              type: array
+              items:
+                $ref: '#/components/schemas/EspeceProtegee'
 
     MuseeUpdate:
       allOf:
-        - $ref: '#/components/schemas/MuseeCreate'
+        - $ref: '#/components/schemas/PatrimoineUpdate'
+        - type: object
+          properties:
+            nombreCollections:
+              type: integer
+              minimum: 0
+            collections:
+              type: array
+              items:
+                $ref: '#/components/schemas/CollectionMusee'
+            expositions:
+              type: array
+              items:
+                $ref: '#/components/schemas/Exposition'
 
     MonumentUpdate:
       allOf:
-        - $ref: '#/components/schemas/MonumentCreate'
+        - $ref: '#/components/schemas/PatrimoineUpdate'
+        - type: object
+          properties:
+            styleArchitectural:
+              type: string
+            anneeConstruction:
+              type: integer
+            identiteArchitecte:
+              type: string
+            natureMonument:
+              $ref: '#/components/schemas/NatureMonument'
+            materiauxConstruction:
+              type: array
+              items:
+                type: string
+            dimensions:
+              type: string
+            commanditaire:
+              type: string
+            contexteHistorique:
+              type: string
+            personnagesAssocies:
+              type: array
+              items:
+                type: string
 
-    # ============================================================
-    # LOCALISATION
-    # ============================================================
-
-    Localisation:
-      type: object
-      required:
-        - latitude
-        - longitude
-      properties:
-        adresse:
-          type: string
-
-        region:
-          type: string
-          example: Dakar
-
-        departement:
-          type: string
-          example: Dakar
-
-        arrondissement:
-          type: string
-
-        commune:
-          type: string
-          example: Gorée
-
-        quartier:
-          type: string
-
-        village:
-          type: string
-
-        lieuDit:
-          type: string
-
-        latitude:
-          type: number
-          format: double
-          minimum: -90
-          maximum: 90
-
-        longitude:
-          type: number
-          format: double
-          minimum: -180
-          maximum: 180
-
-        altitude:
-          type: number
-          format: double
-
-        precision:
-          type: number
-          format: double
-          description: Précision de la géolocalisation en mètres
-
-        zoneGeographique:
-          type: string
-          example: Petite Côte
-
-        aireGeographique:
-          type: string
-
-        codePostal:
-          type: string
-
-        distanceCentreVilleKm:
-          type: number
-          format: double
 
     # ============================================================
     # ACCESSIBILITE
@@ -1591,8 +1559,6 @@ components:
           $ref: '#/components/schemas/CategoriePatrimoine'
         descriptionCourte:
           type: string
-        localisation:
-          $ref: '#/components/schemas/Localisation'
         photoPrincipale:
           type: string
           format: uri
